fixed headings and added padding to avoid overlap of headings and oversized headings at very narrow sizes using @media screen

--- a/css/responsive-design/style.css
+++ b/css/responsive-design/style.css
@@ -45,3 +45,40 @@ figcaption {
   font-style: italic;
   text-align: right;
 }
+
+/*
+
+for a width of 500 px or less, background will become hot pink; larger than 500 it stays white
+
+@media screen and (max-width: 500px) {
+  body {
+    background-color: hotpink;
+  }
+}
+*/
+
+@media screen and (max-width: 500px) {
+  #external-links {
+    padding-right: 20px;
+  }
+}
+
+@media screen and (max-width: 200px) {
+  h1 {
+    font-size: 99%;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
